WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68723
Resolve opcodes should have value profiling.
https://bugs.webkit.org/show_bug.cgi?id=68723
Summary
Resolve opcodes should have value profiling.
Filip Pizlo
Reported
2011-09-23 13:29:18 PDT
We want all operations that load values from the heap to have value profiling. The Resolve opcodes are the last ones that don't.
Attachments
the patch
(13.71 KB, patch)
2011-09-23 15:27 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-09-23 15:27:13 PDT
Created
attachment 108546
[details]
the patch This is pretty much performance neutral. There is a spurious, but totally reproducible, 0.3% slow-down in V8 on my MacBook Pro. There are similarly sized, though not as reproducible, speed-ups in SunSpider and Kraken. I checked and none of the benchmarks that have performance variations make any use of any of the affected opcodes. So these are just insignificant variations due to code layout.
Filip Pizlo
Comment 2
2011-09-23 16:27:36 PDT
Landed in
r95887
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug